--- a/cart.html
+++ b/cart.html
@@ -19,9 +19,9 @@
         </a>
         <a href="cart.html">
             <div class="cart">
-                <!-- <img class="cartimg"
+       <img class="cartimg"
                     src="https://img.icons8.com/external-microdots-premium-microdot-graphic/344/external-cutlery-appliance-electronic-vol1-microdots-premium-microdot-graphic.png"
-                    alt=""> --><button>View Order</button>
+                    alt="">
                 <div id="cartproducts" class="cartproducts">0</div>
             </div>
         </a>
