--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <nav id="navbar">
         <a href="index.html">
-            <h1 class="logo" style="color: white; margin-left: 0.4em;">Foodify</h1>
+            <h1 class="logo" style="color: white; margin-left: 0.4em;">Name</h1>
         </a>
         <a href="cart.html" class="yourOrders">
             <div class="cart">
