--- a/cart.html
+++ b/cart.html
@@ -15,7 +15,7 @@
 <body>
     <nav>
         <a href="index.html">
-            <h1>Foodify</h1>
+            <h1>Name</h1>
         </a>
         <a href="cart.html">
             <div class="cart">
